--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
         </div>
 
     </footer>
-    <script src="script.js"></script>
-    <script>(function(a,m,o,c,r,m){a[m]={id:"54711",hash:"7c8c452c5d67d9021985be5851b374b7a90af21b3e71e694e3b589eb11f47058",locale:"ru",inline:true,setMeta:function(p){this.params=(this.params||[]).concat([p])}};a[o]=a[o]||function(){(a[o].q=a[o].q||[]).push(arguments)};var d=a.document,s=d.createElement('script');s.async=true;s.id=m+'_script';s.src='https://gso.amocrm.ru/js/button.js?1634136452';d.head&&d.head.appendChild(s)}(window,0,'amoSocialButton',0,0,'amo_social_button'));</script>
+    <script>(function(a,m,o,c,r,m){a[m]={id:"89717",hash:"f0f2f0731a41aa8d87db3f28c16aa84f8568a8ade0f4e70aaa79ca8bf17d721c",locale:"ru",inline:false,setMeta:function(p){this.params=(this.params||[]).concat([p])}};a[o]=a[o]||function(){(a[o].q=a[o].q||[]).push(arguments)};var d=a.document,s=d.createElement('script');s.async=true;s.id=m+'_script';s.src='https://gso.amocrm.ru/js/button.js?1641387990';d.head&&d.head.appendChild(s)}(window,0,'amoSocialButton',0,0,'amo_social_button'));</script>
    </body>
 </html>
